--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,12 @@
     "builds": [
         {
             "src": "./index.js",
-            "use": "@vercel/node"
+            "use": "@vercel/node",
+            "config": {
+                "includeFiles": [
+                    "public/**"
+                ]
+            }
         }
     ],
     "headers": [
