--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,12 @@
             "use": "@vercel/static"
         }
     ],
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/"
+        }
+    ],
     "headers": [
         {
             "source": "/(.*)",
