--- a/package.json
+++ b/package.json
@@ -11,8 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "bezier-js": "^4.1.0",
+    "convert-svg-to-png": "^0.6.4",
     "express": "^4.17.1",
+    "image-to-base64": "^2.2.0",
+    "sharp": "^0.30.0",
     "sus-analyzer": "^2.2.4",
     "xmlbuilder2": "^2.4.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.15",
+    "typescript": "^4.9.4"
   }
 }
