--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "bezier-js": "^4.1.0",
+    "chrome-aws-lambda": "^10.1.0",
     "convert-svg-to-png": "^0.6.4",
     "express": "^4.17.1",
     "image-to-base64": "^2.2.0",
-    "puppeteer": "^19.4.0",
+    "puppeteer-core": "^10.4.0",
     "sharp": "^0.30.0",
     "sus-analyzer": "^2.2.4",
     "xmlbuilder2": "^2.4.0"
