--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "bezier-js": "^4.1.0",
-    "chrome-aws-lambda": "^1.15.1",
+    "chrome-aws-lambda": "1.10.0",
     "convert-svg-to-png": "^0.6.4",
     "express": "^4.17.1",
-    "image-to-base64": "^2.2.0",
     "sharp": "^0.30.0",
     "sus-analyzer": "^2.2.4",
     "xmlbuilder2": "^2.4.0"
