--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chrome-aws-lambda": "1.13.0",
     "convert-svg-to-png": "^0.6.4",
     "express": "^4.17.1",
+    "iltorb": "^2.4.5",
     "sharp": "^0.30.0",
     "sus-analyzer": "^2.2.4",
     "xmlbuilder2": "^2.4.0"
