.png to .webp in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
             }
         },
         {
-            "src": "public/asset/*.png",
+            "src": "public/asset/*.webp",
             "use": "@vercel/static"
         },
         {
