--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "NODE_ENV=develop node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,13 +13,9 @@
     "@sparticuz/chromium": "^92.0.0",
     "bezier-js": "^4.1.0",
     "convert-svg-to-png": "^0.6.4",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
+    "serverless-http": "^3.1.0",
     "sus-analyzer": "^2.2.4",
     "xmlbuilder2": "^2.4.0"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.15",
-    "@types/node": "^18.11.15",
-    "typescript": "^4.9.4"
   }
 }
