--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sparticuz/chromium": "^92.0.0",
     "bezier-js": "^4.1.0",
     "convert-svg-to-png": "^0.6.4",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "sus-analyzer": "^2.2.4",
     "xmlbuilder2": "^2.4.0"
