--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,8 @@
             "use": "@vercel/node",
             "config": {
                 "includeFiles": [
-                    "public/**"
+                    "public/**",
+                    "views/**"
                 ]
             }
         },
